[package]
name = "racing_tournament"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "race"
path = "src/main.rs"

[profile.release]
strip = true
opt-level = 3
lto = true
codegen-units = 2
panic = "abort"

[lints.clippy]
unwrap_used = "deny"
enum_glob_use = "deny"
pedantic = { level = "deny", priority = 1 }
nursery = { level = "deny", priority = 1 }

[dependencies]
actix-files = "0.6.6"
actix-web = "4.9.0"
config = { version = "0.14.1", features = ["yaml"] }
dotenv = "0.15.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "registry", "fmt", "std", "json", "tracing-log"] }
